--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
+body,html{
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+
+}
+
 .App {
   text-align: center;
+  margin:0;
 }
 
 .App-logo {
